Removed the endorsed jar reference in the standalone gaards scripts
git-svn-id: https://ncisvn.nci.nih.gov/svn/cagrid/trunk/cagrid/Software/core@18026 dd7b0c16-3c94-4492-92de-414b6a06f0b1