@@ -1,2 +1,3 @@
 #!/bin/sh
-java -Xmx256M -XX:MaxPermSize=128m -Djava.endorsed.dirs=endorsed -jar caGrid-gaards-ui-@project.version@.jar
+JAVA_OPTS="$JAVA_OPTS -Xmx256M -XX:MaxPermSize=128m " 
+java $JAVA_OPTS -jar caGrid-gaards-ui-@project.version@.jar
